# MuniHac22

./: .gitignore  helloworld.cabal  lovecraft-letter.cabal  munihack.cabal  package.yaml  stack.yaml
app/: Main.hs
docs/: Cards.md
src/: Lib.hs
src/LovecraftLetter/: Core.hs  LovecraftDist.hs  Operational.hs  ValidPlayableMoves.hs
