cabal-version: 3.6

name: lovecraft-letter
version: 0.0.0.0
synopsis: An implementation of the Lovecraft Letter card game
build-type: Simple
extra-source-files: README.md

executable lovecraft-letter
  hs-source-dirs: src
  main-is: Main.hs

  other-modules:
    LovecraftLetter.Core
    LovecraftLetter.Operational

  build-depends:
    base >=4.15 && <5
    , containers ^>= 0.6.4
    , directory ^>= 1.3.7
    , filepath ^>= 1.4.2
    , megaparsec ^>= 9.2
    , mtl ^>= 2.3
    , optparse-applicative ^>= 0.17
    , parser-combinators ^>= 1.3
    , scientific ^>= 0.3.7
    , text ^>= 2
    , transformers ^>= 0.6.0.4

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-name-shadowing
    -Wno-unticked-promoted-constructors
    -Wpartial-fields

  default-language: Haskell2010

  default-extensions:
    -- GHC2021
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StarIsType
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NegativeLiterals
    NoMonomorphismRestriction
    NoStarIsType
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    QuantifiedConstraints
    RecordWildCards
    RecursiveDo
    TypeFamilies
    TypeFamilyDependencies
    UnboxedTuples
    UndecidableInstances
    ViewPatterns
